--- a/Test/.project
+++ b/Test/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.robotframework.ide.eclipse.main.plugin.robotNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>libspecs/OperatingSystem.py</name>
+			<type>1</type>
+			<location>/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/robot/libraries/OperatingSystem.py</location>
+		</link>
+	</linkedResources>
 </projectDescription>
